--- a/style.css
+++ b/style.css
@@ -19,9 +19,17 @@
 	min-width: 696px;
 
 }
+
 #topbar button{
 	background-color: #800000;
 	border:1px solid #800000;
+}
+img{
+	border-radius: 10px;
+	border:5px solid white;
+}
+.grid-container img:hover{
+	transform: rotate(0);
 }
 #topbar button{
 	color: white;
@@ -30,17 +38,18 @@
 ul li{
 	display: inline;
 }
-.header-latest{
-	width: 30%;
+.headerlatest{
+	width: 20%;
+	height: 14%;
     margin-left: 40%;
 	background-color: white;
 	position: absolute;
 	text-align: center;
-	top: 120px;
+	top: 100px;
 	}
 h1{
 	color: black;
-	font-size: 25px;
+	font-size: 20px;
 }
 h2{
 	font-family: Mija;
@@ -51,9 +60,22 @@ text-decoration-line: underline;
 font-size: 20px;
 }
 #search{
-	width: 20%;
-    border-right: none;
-	border-left: none;
+	width: 21%;
+	text-align:center;
+	font-size: 22px;
+}
+.fa {
+ display:inline-block;
+ font:normal normal normal 14px/1 FontAwesome;
+ font-size:inherit;
+ text-rendering:auto;
+ -webkit-font-smoothing:antialiased;
+ -moz-osx-font-smoothing:grayscale;
+ margin-left: -250px;
+
+}
+#navbtn :after{
+	background-image: url(cat.png);
 
 }
 
@@ -69,9 +91,10 @@ font-size: 20px;
 float: left;
 margin-left: 30px;
 margin-top: 100px;
-transform: scale(.84) translateX(15%) rotateZ(calc(-1 * (11 * 1deg)));
+/*transform: scale(.84) translateX(15%) rotateZ(calc(-1 * (11 * 1deg)));*/
 transform-origin: 0 100%;
-transition: transform .2s ease-out;
+transition: transform .2s;
+transform: rotateZ(-20deg);
 }
 
 .grid-container > div {
@@ -83,8 +106,25 @@ transition: transform .2s ease-out;
 }
 .item3{
 	background-color:#B22222;
+		
+}
+.item3 button{
 	
+}
+.topitem3{
+	position: absolute;
+	top: 50px;
+	display: inline;
 	
+}
+.topitem3 button{
+	margin-top: 100px;
+	margin-left: 15px;
+	width: 150px;
+	height: 30px;
+	color: white;
+	background-color: #B22222;
+	border-radius: 10px;
 }
 .item4{
 	background-color:#B22222;
@@ -151,6 +191,7 @@ button{
 }
 .members1 img{
 	margin: 5px;
+
 }
 .members1 h5 {
 	margin-top: 0px;
@@ -278,15 +319,21 @@ text-decoration-line: underline;
 .personWeek{
 	display: grid;
 	grid-template-columns: 20% 60%;
-	margin-left: 40px;
-	margin-top: 30px;
+	margin-left: 60px;
+
+	
 	
 }
 .personWeek img{
+	margin-top: 47px;
 	width: 180px;
-	transform: scale(.84) translateX(15%) rotateZ(calc(-1 * (11 * 1deg)));
-transform-origin: 0 100%;
-transition: transform .2s ease-out;
+		transform-origin: 0 100%;
+transition: transform .2s;
+transform: rotateZ(-20deg);
+	
+}
+.personWeek img:hover{
+	transform: rotate(0);
 }
 .gridit{
 	margin-left: 100px;
@@ -297,9 +344,13 @@ transition: transform .2s ease-out;
 }
 .gridit img{
 	float: left;
-	transform: scale(.84) translateX(15%) rotateZ(calc(-1 * (11 * 1deg)));
-transform-origin: 0 100%;
-transition: transform .2s ease-out;
+	transform-origin: 0 100%;
+transition: transform .2s;
+transform: rotateZ(-20deg);
+
+}
+.gridit img:hover{
+	transform: rotate(0);
 }
 
 .gridit h5{
@@ -337,27 +388,37 @@ transition: transform .2s ease-out;
 	height: 15%;
 }
 .designimage{
-	float: right;
+	position: absolute;
+	 right:150px;
+	
+	transform: scale(.84) translateX(15%) rotateZ(calc(-1 * (11 * 1deg)));
+transform-origin: 0 100%;
+transition: transform .2s ease-out;
 }
 
 .gridit2{
 	
 	display: inline-grid;
     grid-template-columns: 45% 45%;
-	grid-column-gap: 5em;
+	grid-column-gap: 2em;
 	grid-row-gap: 7em;
 	height: 150vh;
 	padding: 2px;
+	margin-left: 20px;
+
 }
  .gridit2 button{
 	color: white;
+	margin-left: 25px;
 }
 .gridit2 p{
 	font-size: 19px;
+	margin-left: 25px;
 	
 }
 .gridit2 span{
 	font-size: 12px;
+	margin-left: 25px;
 }
 
 .javaScript button{
@@ -369,12 +430,15 @@ transition: transform .2s ease-out;
 }
 .javaScript h5{
 	color: green;
+	margin-left: 20px;
 }
 .css  h5{
 	color: orange;
+	margin-left: 20px;
 }
 .web  h5{
 	color: #aa1986;
+	margin-left: 20px;
 }
 .newsletter  h5{
 	color: blue;
@@ -384,6 +448,7 @@ transition: transform .2s ease-out;
 	height: 20%;
 	background-color: orange;
 	border-radius:20px;
+	margin-bottom: 40px;
 
 }
 .web button{
@@ -393,8 +458,31 @@ transition: transform .2s ease-out;
 	border-radius:20px;
 
 }
+.javaScript{
+     
+     padding: 5px;
+	-moz-box-shadow:    inset 0 0 4px #000000;
+   -webkit-box-shadow: inset 0 0 4px #000000;
+   box-shadow:         inset 0 0 4px #000000;
+}
+.web{
+	padding: 15px;
+	 -moz-box-shadow:    inset 0 0 4px #000000;
+   -webkit-box-shadow: inset 0 0 4px #000000;
+   box-shadow:         inset 0 0 4px #000000;
+}
+.css{
+	padding: 5px;
+	-moz-box-shadow:    inset 0 0 4px #000000;
+   -webkit-box-shadow: inset 0 0 4px #000000;
+   box-shadow:         inset 0 0 4px #000000;
+}
 .newsletter{
+	padding: 5px;
 	color: white;
+ -moz-box-shadow:    inset 0 0 10px #000000;
+   -webkit-box-shadow: inset 0 0 10px #000000;
+   box-shadow:         inset 0 0 10px #000000;
 	
 }
 .newsletter  label{
